# banyumasan-corpus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  korpus_clean_final.xlsx  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: release.yml
data/: corpus.csv
docs/: corpus-governance.md  local-testing.md  publishing-to-pypi.md
scripts/: build_corpus.py
src/banyumasan_corpus/: __init__.py  _api.py  _models.py
src/banyumasan_corpus/data/: corpus.json
tests/: test_api.py  test_build_script.py
